--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-scikit-learn
-joblib
-pandas
-openpyxl
+streamlit==1.40.1
+scikit-learn==1.2.2
+pandas==1.5.3
+joblib==1.3.2
+openpyxl==3.1.2
