--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.40.1
-scikit-learn==1.2.2
-pandas==1.5.3
+streamlit==1.30.0
+scikit-learn==1.3.2
+numpy==1.26.4
+pandas==2.1.4
 joblib==1.3.2
-openpyxl==3.1.2
